# chess

./: .gitignore  Cargo.toml
benches/: benchmark.rs
src/: ai.rs  game.rs  lib.rs  main.rs  tui.rs
src/game/: board.rs  castling.rs  piece.rs  position.rs
src/game/board/: position.rs
