[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
ratatui = { version = "0.29.0", features = ["unstable-backend-writer"] }
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.5.1"
